# plugz

./: .gitignore  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.2  traces.3
include/: lock_util.h  plugz.h  plugz_db.h  serv_stdio_layer.h  serv_zmq_layer.h  server.h  thpool.h  zhelpers.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: Makefile.am  Makefile.in  lock_util.c  main.c  plugz_db.c  serv_stdio_layer.c  serv_zmq_layer.c  server.c  thpool.c
